2005-01-10  Sebastien Pouliot  <sebastien@ximian.com> 

	* ApplicationIdentityTest.cs: Changed NullReferenceException for
	ArgumentNullException (fixed in Dec CTP) and added test for cultures
	in the application indentity.
	* TimeZoneTest.cs: Ignore (don't fail) test if the current time zone
	isn't part of the test suite.

2005-01-10  Nick Drochak  <ndrochak@ieee.org>

	* ConvertTest.cs: Test for exception thrown by 1.1. This is different
	than the MSDN docs say.  Probably a doc bug.

2005-01-08  Sebastien Pouliot  <sebastien@ximian.com>

	* AppDomainTest.cs: Un-ignore tests that unloaded the appdomain (they
	previously displayed a lot of GC warnings). SetAppDomainPolicy_Dual is
	fixed (i.e. it throws the excepted exception) in 2.0 (Dec CTP).
	* BitConverterTest.cs: Exception thrown only for 1.0/1.1 - an empty 
	string is returned in 2.0.

2005-01-08  Miguel de Icaza  <miguel@ximian.com>

	* Int32Test.cs: Add a couple of new formatting tests.

	* ConvertTest.cs: Updated the kind of exception thrown.

	* BitConverterTest.cs: There is no exception thrown in .NET here.
	Fixes an false negative.

2005-01-04  Raja R Harinath  <rharinath@novell.com>

	Fix for forthcoming type-lookup standard-conformance changes.
	* StringTest.cs: Don't refer to System.Text.Encoding.ASCII.
	Import the System.Text namespace and refer to Encoding.ASCII.

2004-11-24  Zoltan Varga  <vargaz@freemail.hu>

	* TypeTest.cs: Add regression test for #69787.

2004-11-16  Zoltan Varga  <vargaz@freemail.hu>

	* TypeTest.cs: Make property accessor test #if NET_2_0.

2004-11-15  Zoltan Varga  <vargaz@freemail.hu>

	* TypeTest.cs: Add test typeof (IntPtr).IsPrimitive.
	
2004-11-15  Sebastien Pouliot  <sebastien@ximian.com>

	* BitConverter.cs: Added test for (legal) ToString (new byte [0]).

2004-11-15  Zoltan Varga  <vargaz@freemail.hu>

	* TypeTest.cs: Add test for bug #69389.

2004-11-11  Zoltan Varga  <vargaz@freemail.hu>

	* TypeTest.cs: Add test for bug #69365.
